Issue-543 Make compatible with Java 1.8